--- a/.github/workflows/preview-deploy.yml
+++ b/.github/workflows/preview-deploy.yml
@@ -37,6 +37,7 @@ jobs:
           vercel-org-id: ${{ secrets.ORG_ID }}
           vercel-project-id: ${{ secrets.PROJECT_ID }}
           github-comment: true
+          vercel-args: '--cwd frontend'
           working-directory: ./frontend
 
       - name: Comment PR
