--- a/.github/workflows/preview-deploy.yml
+++ b/.github/workflows/preview-deploy.yml
@@ -8,6 +8,10 @@ on:
 jobs:
   deploy-preview:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
+      issues: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -58,15 +62,3 @@ jobs:
           github-comment: true
           vercel-args: '--prebuilt'
           working-directory: ./frontend
-
-      - name: Comment PR
-        uses: actions/github-script@v7
-        if: success()
-        with:
-          script: |
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: '🚀 Preview deployment completed! Check the deployment URL above.'
-            })
