--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,12 +20,13 @@
   },
   "dependencies": {
     "@ai-sdk/gateway": "^1.0.39",
+    "@ai-sdk/openai-compatible": "^1.0.22",
     "@ai-sdk/vue": "^2.0.68",
     "@iconify-json/lucide": "^1.2.69",
     "@iconify-json/simple-icons": "^1.2.54",
     "@iconify/vue": "^4.1.1",
     "@nuxt/ui": "^4.0.1",
-    "ai": "^5.0.68",
+    "ai": "^5.0.76",
     "date-fns": "^4.1.0",
     "echarts": "^6.0.0",
     "nuxt": "^4.1.3",
